ISSUE 787:  Agent Details column flow tests PURPOSE:  paddings and margins change, collapse citations if signed in, and change columns to 4 if signed in/2 if not.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1896,11 +1896,11 @@ th {
 	max-width: 100%;
 	column-count: 2;
 }
-.containFlex3 {
+.containFlex4 {
 	column-gap: 10px;
 	flex-wrap: wrap;
 	max-width: 100%;
-	column-count: 3;
+	column-count: 4;
 }
 .accordion {
 -webkit-column-break-inside: avoid;
